--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>React App</title>
     <script src="p5/p5.js" ></script>
     <script src="p5/addons/p5.sound.js" ></script>
+    <script src="sketches/sketchlib.js" ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
